2002-03-19  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Add two tests of position().

2002-03-07  Per Bothner  <per@bothner.com>

	* bids.xml.in, items.xml.in, users.xml.in:  New test data files.
	* Makefile.am (EXTRA_DIST):  Add new files.
	* use-cases.xml:  Import 2 more test cases from W3C Use Cases.

2002-02-12  Per Bothner  <per@bothner.com>

	* TestMisc.java (eval):  Call CallContext.getInstance.

2002-02-05  Per Bothner  <per@bothner.com>

	* book1.xml.in:  New datafile for W3C use-cases.
	* reviews.xml.in:  New datafile for W3C use-cases.
	* Makefile.am (EXTRA_DIST)):  Update accordingly.
	* use-cases.xml:  Add 7 new tests from W3C use-cases.

2002-01-29  Per Bothner  <per@bothner.com>

	* TestMisc.java (printSummary):  New method.
	(main):  Call printSummary.

	* TestMisc.java (matches):  New method.
	(evalTest):  Use matches rather than equals.
	* TestSuite.java:  New class, inherits from TestMisc.
	* bib.xml.in:  New data file, referenced from uses-cases.xml.
	* use-cases.xml:  New collection of tests, from W3C use-cases.
	* Makefile.am:  Upadte for new test.

2002-01-21  Per Bothner  <per@bothner.com>

	* TestMisc.java (main): Add test for 'for'-'where'.
	Add test for 'unescaped-data'.

2002-01-07  Per Bothner  <per@bothner.com>

	* tab.xml.in:  Add some CDATA and a comment to verify they work.

2001-11-18  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Change 3.4 and 4.4.to 3.5 and 4.5 to avoid
	risk of round-off error.

	* TestMisc.java:  Specify package as gnu.xquery.testsuite.
	* Makefile.am (TestMisc.class, check-misc):  Change accordingly.

2001-11-12  Per Bothner  <per@bothner.com>

	* TestMisc.java:  More new tests.

2001-11-06  Per Bothner  <per@bothner.com>

	* TestMisc.java:  A bunch of new tests, plus removed expected failure.

2001-11-01  Per Bothner  <per@bothner.com>

	* tab.xml.in:  Add some attributes so we can test for that.
	* TestMisc.java:  New class with many small tests.