@@ -1,3 +1,9 @@
+2002-04-08  Per Bothner  <per@bothner.com>
+
+	* TestMisc.java:  Addes tests for node(), text() and children().
+
+	* use-cases.xml:  We can now use text() as in the original use-cases.
+
 2002-03-19  Per Bothner  <per@bothner.com>
 
 	* TestMisc.java:  Add two tests of position().
